--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang='en'>
+   <head>
+       <meta charset='utf-8'>
+       <title> The Red Gipsy </title>
+   </head>
+   <body>
+       <h1>Lets start to create a new world! </h1>
+       <p1> <b> And it will start with digital take over!!!! </b> </p1>
+       <h3> <b> And this is a true story </b> </h3>
+       <p2> <strong> Its gona be a Strong comunity </strong> </p2>
+       <h2> <i> And were the best Musik </i> </h2>
+       <p1> <em> Roma Entertainmant will take over </em> </p1>
+       <p2> <sub> and its gona be subscripted from verybody!!!! </sub> </p2>
+       <h3> <sup> You have to keep this in mind (brain) </sup> </p>
+       <h4> <s> Stoping us </s> </h4> <h4> No way to be continued (ghost) </h4>
+   </body>
+</html>
